# EndureIT

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_STEPS.md  ENV_CONFIGURATION.md  LICENSE  MAP_INTEGRATION.md  Makefile  PROJECT_STRUCTURE.md  README.md  ROOT_FILES_GUIDE.md  START.sh  STRAVA_IMPLEMENTATION_SUMMARY.md  STRAVA_SETUP.md  docker-compose.yml  requirements.txt  setup-env.sh  setup-strava-user.sh  test_login.sh
backend/: Dockerfile  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  SETUP.md  STRAVA_INTEGRATION.md  check_best_efforts.py  create_first_strava_user.py  create_strava_user.py  create_user_with_token.py  example_fetch_strava_activities.py  main.py  pyproject.toml  quick_strava_demo.py  refresh_strava_token.py  requirements.txt  seed_activities.py  sync_all_best_efforts.py  update_username.py  verify_setup.sh
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py  settings.py
backend/app/db/: base.py  database.py  init_db.py
backend/app/models/: claude_audit.py  nutrition.py  strava_activity.py  training_plan.py  user.py  workout.py
backend/app/schemas/: user.py  workout.py
backend/app/services/: claude_client.py  dashboard_service.py  goal_service.py  progress_service.py  (+5 more)
backend/migrations/: add_audit_log.sql  add_nutrition.sql  add_training_plans.sql
backend/nginx/: nginx.conf
backend/tests/: conftest.py  test_ai_adjuster.py  test_settings.py  test_training_plans.py
(+60 files in other folders)
